--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,19 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@hello-pangea/dnd": "^16.5.0",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
+    "@mui/x-date-pickers": "^6.19.3",
+    "@mui/x-date-pickers-pro": "^6.19.3",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
+    "draft-js": "^0.11.7",
+    "md5": "^2.3.0",
+    "mui-color-input": "^2.0.1",
     "react": "^18.0.0-rc.3",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.0.0-rc.3",
@@ -20,6 +25,7 @@
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
