--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,15 @@
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
     "draft-js": "^0.11.7",
+    "filepond": "^4.30.6",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.12",
     "md5": "^2.3.0",
     "mui-color-input": "^2.0.1",
     "react": "^18.0.0-rc.3",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.0.0-rc.3",
+    "react-filepond": "^7.1.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
