--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,12 @@
     "filepond-plugin-image-preview": "^4.6.12",
     "md5": "^2.3.0",
     "mui-color-input": "^2.0.1",
+    "quill": "^2.0.0-rc.2",
     "react": "^18.0.0-rc.3",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.0.0-rc.3",
     "react-filepond": "^7.1.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
@@ -59,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/quill": "^2.0.14"
   }
 }
