--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,12 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   },
   "author": "",
   "license": "ISC",
@@ -23,5 +28,15 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.0.2",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/preset-env": "^7.24.5",
+    "babel-jest": "^29.7.0",
+    "chai": "^5.1.0",
+    "jest": "^29.7.0",
+    "mocha": "^10.4.0",
+    "supertest": "^7.0.0"
   }
 }
