--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "jest"
+    "test": "cross-env NODE_ENV=test jest"
   },
   "jest": {
     "transform": {
@@ -35,6 +35,7 @@
     "@babel/preset-env": "^7.24.5",
     "babel-jest": "^29.7.0",
     "chai": "^5.1.0",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "mocha": "^10.4.0",
     "supertest": "^7.0.0"
