--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@draft-js-plugins/editor": "^4.1.4",
-    "@draft-js-plugins/image": "^4.1.4",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
     "@mui/x-date-pickers": "^6.19.3",
-    "@mui/x-date-pickers-pro": "^6.19.3",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,23 +16,18 @@
     "dayjs": "^1.11.10",
     "draft-js": "^0.11.7",
     "filepond": "^4.30.6",
-    "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.12",
     "md5": "^2.3.0",
     "mui-color-input": "^2.0.1",
-    "quill": "^2.0.0-rc.2",
     "react": "^18.0.0-rc.3",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.0.0-rc.3",
-    "react-filepond": "^7.1.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^3.1.0",
-    "web-vitals": "^2.1.4"
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
